--- a/about.html
+++ b/about.html
@@ -25,6 +25,66 @@
 
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
+	
+	<!-- Fusion table API-->
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	
+  <!-- script for map starts here -->
+	
+    <script type="text/javascript">
+      function initialize() {
+        var tableId = '1VOyINVnb6lmRAKm36M5VhOA8t2VSVjbe3gCDx-dB';
+        var locationColumn = 'Address';
+
+        var map = new google.maps.Map(document.getElementById('map-canvas'), {
+          center: new google.maps.LatLng(53.3478, -6.2597),
+          zoom: 12,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        });
+
+        var layer = new google.maps.FusionTablesLayer({
+          query: {
+            select: locationColumn,
+            from: tableId
+          },
+          map: map
+        });
+
+        google.maps.event.addDomListener(document.getElementById('delivery'),
+            'change', function() {
+              updateMap(layer, tableId, locationColumn);
+        });
+      }
+
+      // Update the query sent to the Fusion Table Layer based on
+      // the user selection in the select menu
+      function updateMap(layer, tableId, locationColumn) {
+        var delivery = document.getElementById('delivery').value;
+        if (delivery) {
+          layer.setOptions({
+            query: {
+              select: locationColumn,
+              from: tableId,
+              where: "County = '" + delivery + "'"
+            }
+          });
+        } else {
+          layer.setOptions({
+            query: {
+              select: locationColumn,
+              from: tableId
+            }
+          });
+        }
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+	<style>
+	#map-canvas {
+width: 100%;
+height: 550px;
+}
+</style>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -115,11 +175,14 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">We're located here</h2>
-		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.699572526162!2d-6.243182799999963!3d53.34863390000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e8d1bdaf2ed%3A0x20fe35903d91c026!2sUnit+1%2C+National+College+of+Ireland!5e0!3m2!1sen!2sie!4v1394472882525" width="100%" height="550" frameborder="0" style="border:0"></iframe>
+	  <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+          <h2 class="featurette-heading">Future Gigs are located on the map.</h2>
+		  <div id="map-canvas"></div><!-- map ends -->
+		 <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.699572526162!2d-6.243182799999963!3d53.34863390000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e8d1bdaf2ed%3A0x20fe35903d91c026!2sUnit+1%2C+National+College+of+Ireland!5e0!3m2!1sen!2sie!4v1394472882525" width="100%" height="550" frameborder="0" style="border:0"></iframe>-->
           </div>
-        <div class="col-md-5">
+        <div class="col-md-2">
         </div>
       </div>
 
